# MPCC-2D

./: CMakeLists.txt  LICENSE.md  README.md
include/: Constrained2ndOrderConstraints.hpp  Constrained2ndOrderModel.hpp  DiffDriveCost.hpp  DiffDriveModel.hpp  ForwardEuler.hpp  Integrator.hpp  MPCC.hpp  Model.hpp  NoConstraints.hpp  ParametricSpline.hpp  RunningConstraintModel.hpp  RunningCost.hpp  SecondOrderModel.hpp  SecondOrderModelConstraints.hpp  SecondOrderModelCost.hpp  Spline1D.hpp
src/: Constrained2ndOrderConstraints.cpp  Constrained2ndOrderModel.cpp  DiffDriveCost.cpp  DiffDriveModel.cpp  ForwardEuler.cpp  MPCC.cpp  NoConstraints.cpp  ParametricSpline.cpp  RunningCost.cpp  SecondOrderModel.cpp  SecondOrderModelConstraints.cpp  SecondOrderModelCost.cpp  Spline1D.cpp
test/: main.cpp  test1.cpp  test2.cpp
